objects/Notification_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Display_Name__c</fullName>
        <description>Display name recipient will see when receiving notification from Schoolforce</description>
        <label>Display Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reply_To__c</fullName>
        <description>Sets the reply To for notifications from Schoolforce to Parent/Guardians</description>
        <label>Reply To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Subject of the notification</description>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Notification Settings</label>
</CustomObject>